# SAM

./: .clang-tidy  .gitignore  .gitmodules  .netrc  .tarvis.yml  .travis.yml  CMakeLists.txt  Doxybook  Doxyfile  Doxyfile-mcss  HackingMethods.md  NOTICE.md  README.html  README.md  README.rst  _config.yaml  _config.yml  config_file.json  decision_strategy_template.json  delink.hs  doxy.py  doxymark.sh  experiment_setup_2_by_2_linear_model.json  hacking_methods.json  hacking_strategies.json  hacking_strategy_outliers_removal_template.json  index.md  index.rst  latent_model_config.json  main.cpp  new_config_file.json  new_researcher_config.json  sample_config.json  sample_config_file.json  sample_hacking_methods.json  subjective_optional_stopping_template.json
.github/workflows/: cmake.yml  macos.yml
doc/: API.md  Components.md  ConfigurationFileSpecifications.md  DataStrategies.md  DecisionStrategies.md  ExecutionFlow.md  HackingStrategies.md  Introduction.md  extending-sam.md
doc/api/: API.md  class_CohensD.md  class_DataGenStrategy.md  class_DecisionStrategy.md  class_EffectEstimators.md  class_Experiment.md  class_ExperimentSetup.md  class_GroupPooling.md  class_HackingFactory.md  class_HackingStrategy.md  class_ImpatientDecisionMaker.md  class_InputParameters.md  class_Journal.md  class_LatentDataStrategy.md  class_LinearModelStrategy.md  class_OptionalStopping.md  class_RandomNumberGenerator.md  class_ReportPreregisteredGroup.md  class_Researcher.md  class_Researcher_Builder.md  class_SDOutlierRemoval.md  class_SelectionStrategy.md  class_SignigicantSelection.md  class_Submission.md  class_TTest.md  class_TestResult.md  class_TestStrategy.md  class_cohens_d.md  class_data_gen_strategy.md  class_decision_strategy.md  class_effect_estimators.md  class_experiment_setup.md  class_group_pooling.md  class_hacking_factory.md  class_hacking_strategy.md  class_impatient_decision_maker.md  class_latent_data_strategy.md  class_linear_model_strategy.md  class_optional_stopping.md  class_random_number_generator.md  (+8 more)
doc/figures/: Components.graffle
docs/: DataStrategies.md  DecisionStrategies.md  HackingStrategies.md  SAMoo.md  SAMoo.rst  conf.py  configuration-file.md  configuration-file.rst  data-strategies.md  data-strategies.rst  decision-strategies.md  decision-strategies.rst  design.md  design.rst  effect-strategies.md  effect-strategies.rst  examples.md  extending-sam.md  extending-sam.rst  flow.md  flow.rst  hacking-strategies.md  hacking-strategies.rst  index.md  index.rst  introduction.md  introduction.rst  journal.md  selection-strategies.md  selection-strategies.rst  test-strategies.md
docs/_mdbackup/: Components.md  ConfigurationFileSpecifications.md  Introduction.md
docs/_static/: custom.css
docs/doxygen/: header.tex
docs/figures/: Components.graffle  Flowchart.graffle
docs/reST/: configuration-file.rst  data-strategies.rst  decision-strategies.rst  examples.rst  flow.rst  hacking-strategies.rst  index.rst  introduction.rst  selection-strategies.rst  test-strategies.rst
include/: DataGenStrategy.h  DataStrategy.h  DecisionStrategy.h  DependentVariable.h  Distributions.h  EffectEstimators.h  EffectStrategy.h  Experiment.h  ExperimentSetup.h  Group.h  GroupData.h  HackerFactory.h  HackingProbabilityStrategy.h  HackingStrategies.h  HackingStrategy.h  HackingStrategyTypes.h  IOManager.h  Journal.h  LuaUtils.h  MetaAnalysis.h  Parameter.h  PersistenceManager.h  Policy.h  RandomNumberGenerator.h  ResearchStrategy.h  Researcher.h  ReviewStrategy.h  SelectionStrategies.h  SelectionStrategy.h  Submission.h  SubmissionRecord.h  TestStrategies.h  TestStrategy.h  Utilities.h  ioUtilities.h  main.h  sam.h
include/csv/: dialect.hpp  reader.hpp  writer.hpp
include/effolkronium/: random.hpp
include/indicators/: indicators.hpp
include/utils/: multivariate_random.h  mvnorm_distribution.h  permutation.h  tqdm.h  truncated_mvnorm_distribution.h  truncated_normal_distribution.h  truncated_random.h
inputs/: graded_response_model_config_example.json  graded_response_model_config_template.json  latent_model_config_template.json  linear_model_config_template.json  subjective_outlier_removal_template.json
src/: DSGradedResponseModel.cpp  DSLatentModel.cpp  DSLinearModel.cpp  DataGenStrategy.cpp  DataStrategy.cpp  DecisionStrategy.cpp  DependentVariable.cpp  Distributions.cpp  EffectEstimators.cpp  EffectStrategy.cpp  Experiment.cpp  ExperimentSetup.cpp  GRMDataStrategy.cpp  Group.cpp  GroupData.cpp  HSFabricatingData.cpp  HSFalsifyingData.cpp  HSGroupPooling.cpp  HSOptionalDropping.cpp  HSOptionalStopping.cpp  HSOutliersRemoval.cpp  HSPeekingOutliersRemoval.cpp  HSQuestionableRounding.cpp  HSStoppingDataCollection.cpp  HSSubjectiveOptionalStopping.cpp  HSSubjectiveOutliersRemoval.cpp  HackerFactory.cpp  HackingProbabilityStrategy.cpp  HackingStrategies.cpp  HackingStrategy.cpp  Journal.cpp  LatentModelDataStrategy.cpp  LinearModelDataStrategy.cpp  MetaAnalysis.cpp  Parameter.cpp  PersistenceManager.cpp  Policy.cpp  RSDefaultResearchStrategy.cpp  RandomNumberGenerator.cpp  ResearchStrategy.cpp  (+14 more)
test/: .tarvis.yml
test/include/: test_fixtures.h
test/src/: data_strategy_test.cpp  experiment_setup_test.cpp  experiment_test.cpp  hacking_strategy_test.cpp  optional_stopping_test.cpp  researcher_test.cpp  sd_outliers_removal_test.cpp  selection_strategy_test.cpp  test_strategy_test.cpp
tests/configs/: simple_experiment_setup.json
tests/include/: policies_variables_and_functions.h  sample_experiment_setup.h  test_fixtures.h
tests/src/: dependent_variable_test.cpp  experiment_setup_test.cpp  experiment_test.cpp  hacking_strategy_test.cpp  journal_test.cpp  meta_analysis_test.cpp  parameter_tests.cpp  policies_test.cpp  researcher_test.cpp  review_strategy_test.cpp  test_strategy_test.cpp
